--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CommandBlocksJS.Cmd.GUI.MainWindow"
+﻿<Window x:Class="CommandBlocksJS.GUI.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		Title="CommandBlocksJS Generator" Height="470" Width="661" MinHeight="256" MinWidth="452">
@@ -73,7 +73,7 @@
 			<TextBox BorderThickness="0" Name="tbFileName" IsReadOnly="True" VerticalContentAlignment="Center" Padding="5,0,0,0" />
 			<Button Content="OPEN" Grid.Column="1" Style="{StaticResource FlatSec}" Click="onBrowseFileClick" />
 		</Grid>
-		<TextBox BorderThickness="0" Name="tbConsole" Grid.Row="1" Background="#FFF9F9F9" FontFamily="Consolas" Padding="8,8,0,0" AcceptsReturn="True" TextWrapping="NoWrap">Select file from above...</TextBox>
+		<TextBox BorderThickness="0" Name="tbConsole" IsReadOnly="True" Grid.Row="1" Background="#FFF9F9F9" FontFamily="Consolas" Padding="8,8,0,0" AcceptsReturn="True" TextWrapping="NoWrap">Select file from above...</TextBox>
 		<Button Content="GENERATE" Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom" Height="26" Style="{StaticResource Flat}" Click="onGenerateButtonClick" />
 		<Grid Grid.Column="1" Height="49" VerticalAlignment="Top" Grid.RowSpan="2" Background="WhiteSmoke">
 			<RadioButton Name="IsWorld" IsChecked="True" Content="World" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top" />
